--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,14 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     // Jsoup
     implementation "org.jsoup:jsoup:1.14.3"
+    // room
+    def room_version = "2.5.1"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    // coil
+    implementation("io.coil-kt:coil-compose:2.3.0")
+
 }
