--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:screenOrientation="portrait"
+        android:name=".WindowShopperApplication"
         android:theme="@style/Theme.WindowShopper"
         tools:targetApi="31">
         <activity
