--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,6 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
 
-
     // compose navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
     // viewmodel
@@ -88,6 +87,7 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.3.0")
     // hilt
     implementation "com.google.dagger:hilt-android:2.45"
+    implementation ("androidx.hilt:hilt-navigation-compose:1.0.0")
     kapt "com.google.dagger:hilt-compiler:2.45"
     implementation 'com.android.support:support-annotations:28.0.0'
     // Local Unit Tests
