--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ android {
             exclude("META-INF/*.kotlin_module")
         }
     }
+
+
 }
 
 dependencies {
@@ -81,8 +83,13 @@ dependencies {
     // room
     def room_version = "2.5.1"
     implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+// Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
     annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+
     // coil
     implementation("io.coil-kt:coil-compose:2.3.0")
     // hilt
