--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,8 @@ dependencies {
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.44'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.44'
 
+    // rating bar
+    implementation 'com.github.a914-gowtham:compose-ratingbar:1.3.4'
     // truth
     testImplementation "com.google.truth:truth:1.1.3"
     //mockito
